--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@
   </div>
 
   <header>
-    <div class="logo">UNSW AI Resume</div>
+    <div class="logo">UNSW AI Resume Analyzer</div>
     <nav>
       <a href="#how">How it Works</a>
       <a href="#upload">Upload</a>
