--- a/templates/results.html
+++ b/templates/results.html
@@ -73,9 +73,9 @@
       box-shadow: 0 0 30px rgba(230,184,0,0.6);
     }
     .elective-card h3 {
-      font-size: 1.2rem;
-      font-weight: 600;
-      color: var(--white);
+      font-size: 1.3rem;
+      font-weight: 700;
+      color: var(--unsw-yellow);
       margin-bottom: 0.5rem;
     }
     .elective-card p {
