--- a/templates/results.html
+++ b/templates/results.html
@@ -102,7 +102,7 @@
     .electives-list a {
     text-decoration: none;
     color: inherit;
-    display: block; /* make the whole card clickable */
+    display: block;
    }
 
     
