Added friend's AI scripts

--- a/templates/results.html
+++ b/templates/results.html
@@ -116,7 +116,7 @@
   </header>
 
   <section class="results">
-    <h2>Recommended Electives</h2>
+    <h2>Recommended Electives (Click a card to open handbook)</h2>
     {% if courses %}
   <div class="electives-list">
     {% for course in courses %}
